Fix blog spacing

--- a/styles/pages/homepage/homepage.scss
+++ b/styles/pages/homepage/homepage.scss
@@ -17,7 +17,7 @@
 // General
 .layout-content.homepage {
   padding-top: 0;
-  padding-bottom: 200px;
+  padding-bottom: 350px;
 
   @include media-breakpoint-down(lg) {
     padding-bottom: 100px;
